--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,10 @@
 <div *ngIf="loadRouting">
     <router-outlet></router-outlet>
 </div>
-
+<a href="https://iris.portaloas.udistrital.edu.co/scp/login.php"
+   target="_blank"
+   class="icono-fijo"
+   aria-label="Abrir soporte técnico IRIS">
+    <img src="assets/img/apoyo-tecnico.png" alt="Soporte técnico">
+    <span class="tooltip-text">Botón de ayuda, dar click aqui</span>
+</a>
